storybook-html: grid docs for 6-8-12 (first draft)

--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -12,21 +12,26 @@ Starting with mobile, the grid column classes,
 > to both sides of the column row *and* apply a max-width on XL screens on the
 > root `.uq-grid` node.
 
+<Story height={80} id="layout-grid--twelve-eight-six" />
+
+```html
+<div class="uq-grid">
+  <div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-5 uq-grid__col--xl-8">Content</div>
+  <div class="uq-grid__col uq-grid__col--2 uq-grid__col--md-3 uq-grid__col--xl-4">Content</div>
+</div>
+```
+
 ### The 6-column grid span classes (designed for _mobile_ displays)
 
-<Story height={600} id="layout-grid--twelve-eight-six-mobile" />
+<Story height={480} id="layout-grid--twelve-eight-six-mobile" />
 
 ### The 8-column grid span classes (designed for _tablet_ displays)
 
-<Story height={400} id="layout-grid--twelve-eight-six-tablet" />
+<Story height={330} id="layout-grid--twelve-eight-six-tablet" />
 
 ### The 12-column grid span classes (designed for _desktop/laptop_ displays)
 
-<Story height={400} id="layout-grid--twelve-eight-six-desktop" />
-
-### Our recommended usage
-Please specify column span for each breakpoint to ensure that your layout
-conforms to the _base grid_.
+<Story height={380} id="layout-grid--twelve-eight-six-desktop" />
 
 ### Nesting
 
