--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -53,18 +53,18 @@ Our layout system is built upon a 6-8-12 column strategy — our base grid.
 export const BaseLayoutGrid = () => `
   <div class="uqds-base-layout-grid">
     <div class="uq-grid">
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
-      <div class="uq-grid__col uq-grid__col--1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--1 uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--1 uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--1 uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--1 uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--1 uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--1 uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--md-1 uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
+      <div class="uq-grid__col uq-grid__col--xl-1">Col<br/>&larr;&rarr;</div>
     </div>
   </div>
 `;
