Colour doc fixes

--- a/packages/storybook-html/src/components/core/colours-gradient.story.mdx
+++ b/packages/storybook-html/src/components/core/colours-gradient.story.mdx
@@ -18,13 +18,13 @@ It is recommended to always reference the provide variable and avoid creating cu
       <th class="uqds-table__heading">Example</th>
       <th class="uqds-table__heading">Name</th>
       <th class="uqds-table__heading">Variable</th>
-      <th class="uqds-table__heading">Usage</th>
+      <th class="uqds-table__heading">Notes</th>
     </tr>
     <tr  class="uqds-table__row">
       <td class="uqds-table__item"><div class="uqds-colour__palette uqds-purple-gradient"></div></td>
       <td class="uqds-table__item" data-title="Name:">UQ Purple Gradient</td>
       <td class="uqds-table__item" data-title="Variable:"><code>$uq-purple-gradient</code></td>
-      <td class="uqds-table__item" data-title="Usage:">
+      <td class="uqds-table__item" data-title="Notes:">
       <ul>
         <li><code>$uq-purple</code> to <code>$uq-light-purple</code></li>
         <li>Gradient Centre point set to 87%</li>
