--- a/packages/storybook-html/src/components/core/colours.story.mdx
+++ b/packages/storybook-html/src/components/core/colours.story.mdx
@@ -31,7 +31,7 @@ These are the most common text examples and usages.
   <tr class="uqds-table__row">
     <td class="uqds-table__item"><strong class="uqds-text-color--grey">Secondary Text</strong> <div class="uqds-colour__palette uqds-neutral-dark40"></div></td>
     <td class="uqds-table__item" data-title="Name:">Secondary text</td>
-    <td class="uqds-table__item" data-title="Variable:"><code>$uqds-neutral-dark40</code></td>
+    <td class="uqds-table__item" data-title="Variable:"><code>$uq-neutral-dark40</code></td>
     <td class="uqds-table__item" data-title="Usage:">
     <ul>
     <li>Used to reduce the emphasis of text</li>
