--- a/packages/storybook-html/src/components/header/header.docs.mdx
+++ b/packages/storybook-html/src/components/header/header.docs.mdx
@@ -1,24 +1,169 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
-# Header
+# Global header
 
-The global UQ header provides a consistent branding and navigational element across all UQ pages. Reinforced by the UQ logo, the header enables users to quickly identify and trust UQ websites.
+The global header provides a consistent branding and navigational element across
+all UQ pages. Reinforced by the UQ strapline, the header enables users to
+quickly identify and trust UQ websites.
 
 ## With global search only
 
-Provides broad UQ site search using the general UQ search service
-(located: https://www.uq.edu.au/search).
+Provides the UQ strapline, global links, and a general UQ site search feature
+using [*UQ Search*](https://www.uq.edu.au/search).
+
+> Don't reappropriate the search function for special integrated search
+> functionality within your application e.g. searching for a location on a map,
+> searching for books or articles in a library database.
 
 <Canvas withSource="none" withToolbar>
-  <Story height={500} id="components-header--header-no-local-search" />
+  <Story height={220} id="components-header--header-no-local-search" />
 </Canvas>
+
+```html
+<header class="uq-header">
+  <div class="uq-header__container">
+    <div class="nav-global">
+      <div class="logo">
+        <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+        <a class="logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+      </div>
+      <nav class="menu-global">
+        <ul>
+          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+          <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+          <li><a href="https://www.uq.edu.au/news/">News</a></li>
+          <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+          <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
+          <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+          <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+          <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+          <li class="menu-global__search-toggle">
+            <button class="search-toggle__button">Search</button>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="nav-search">
+      <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" accept-charset="UTF-8">
+        <fieldset class="nav-search__wrapper">
+          <legend class="hidden">
+            <span class="nav-search__title">What are you looking for?</span>
+          </legend>
+          <span class="nav-search__title">What are you looking for?</span>
+          <div class="nav-search__scope">Search all UQ websites</div>
+        </fieldset>
+        <div class="nav-search__query">
+          <span class="search-query__wrapper">
+            <label for="edit-q" class="visually-hidden">Search term</label>
+            <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
+            <span class="search-query__button">
+              <input type="submit" name="op" value="Search" class="search-query__submit">
+            </span>
+          </span>
+        </div>
+      </form>
+      <nav class="menu-global">
+        <ul>
+          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://www.uq.edu.au/news/">News</a></li>
+          <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+          <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+          <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+          <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+          <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+          <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
+          <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
+```
 
 ## With global and site search
 
-Allows the user to choose between global search and your local site/app search
-functionality. You must configure the form properties to use your service
-endpoints.
+Provides the UQ strapline, global links, and a site search feature using
+[*UQ Search*](https://www.uq.edu.au/search). Two radio options are included to
+allow users to choose to search all UQ sites or just the content on your site\*.
+
+> \*If your application/website isn't indexed by UQ Search, please opt
+> to use the global header **with global search only**.
 
 <Canvas withSource="none" withToolbar>
-  <Story height={500} id="components-header--header" />
+  <Story height={220} id="components-header--header" />
 </Canvas>
+
+```html
+<header class="uq-header">
+  <div class="uq-header__container">
+    <div class="nav-global">
+      <div class="logo">
+        <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+        <a class="logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+      </div>
+      <nav class="menu-global">
+        <ul>
+          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+          <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+          <li><a href="https://www.uq.edu.au/news/">News</a></li>
+          <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+          <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
+          <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+          <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+          <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+          <li class="menu-global__search-toggle">
+            <button class="search-toggle__button">Search</button>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="nav-search">
+      <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" accept-charset="UTF-8">
+        <fieldset class="nav-search__wrapper">
+          <legend class="hidden">
+            <span class="nav-search__title">What are you looking for?</span>
+          </legend>
+          <span class="nav-search__title">What are you looking for?</span>
+          <div class="nav-search__scope">
+            <div class="nav-search__scope__radio-wrapper">
+              <div class="form-item">
+                <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio">
+                <label for="edit-as_sitesearch-off" class="option">Search all UQ websites</label>
+              </div>
+              <!-- Customise the site search URL for your website -->
+              <div class="form-item">
+                <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="[https://your-site-domain.uq.edu.au]" checked="checked" class="form-radio">
+                <label for="edit-as_sitesearch-on" class="option">Search this website ([your-site-domain.uq.edu.au])</label>
+              </div>
+            </div>
+          </div>
+        </fieldset>
+        <div class="nav-search__query">
+          <span class="search-query__wrapper">
+            <label for="edit-q" class="visually-hidden">Search term</label>
+            <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
+            <span class="search-query__button">
+              <input type="submit" name="op" value="Search" class="search-query__submit">
+            </span>
+          </span>
+        </div>
+      </form>
+      <nav class="menu-global">
+        <ul>
+          <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+          <li><a href="https://www.uq.edu.au/news/">News</a></li>
+          <li><a href="https://www.library.uq.edu.au/">Library</a></li>
+          <li><a href="https://future-students.uq.edu.au/">Study</a></li>
+          <li><a href="https://www.uq.edu.au/events/">Events</a></li>
+          <li><a href="https://giving.uq.edu.au/">Give now</a></li>
+          <li><a href="https://maps.uq.edu.au/">Maps</a></li>
+          <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
+          <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
+```
