grid, storybook-html: add flexible grid layout option

--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -19,15 +19,15 @@ for you to choose from.
 | Name         | Description | Thumbnail |
 | ------------ | ----------- | ------------------ |
 | Golden | [TODO] Inspired by [*The Golden Ratio*](https://www.canva.com/learn/what-is-the-golden-ratio/). Compose simple layouts that are pleasing to the eye. | Coming soon |
-| Flexible grid | [TODO] Auto-sizing grid. | Coming soon |
+| [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | [TODO] Auto-sizing grid. | Coming soon |
 | Halves | [TODO] A two-column grid. | Coming soon |
 | Thirds | [TODO] A three-column grid. | Coming soon |
 | Quarters | [TODO] A four-column grid. | Coming soon |
 | Scrolling grid | [TODO] A grid that scrolls horizontally on mobile. Useful for holding cards. | Coming soon |
-| [6-8-12](/?path=/docs/layout-grid--twelve-eight-six) | Advanced. The most consistent, flexible implementation of our layout system. It is what our other layouts are built upon. | Coming soon |
+| [6-8-12](/?path=/docs/layout-grid--twelve-eight-six#6-8-12-grid) | Advanced. The most consistent, flexible implementation of our layout system. It is what our other layouts are built upon. | Coming soon |
 
 > Currently, all our layout options can be used by installing or downloading the
-> [`@uq-uidf/grid`](?path=/docs/layout-grid--basic-usage) package into your
+> [`@uq-uidf/grid`](/?path=/docs/layout-grid--twelve-eight-six) package into your
 > project.
 
 ## Further reading: our base grid
