--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -2,6 +2,31 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 
 # Grid
 
+## Flexible grid
+
+The flexible grid leverages the power of [*CSS Grid Layout*](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)
+to give you a quick & flexible layout solution. You can use this grid to
+organise your content into columns that stack when browser sizes are smaller.
+Therefore, it makes it an ideal solution for arranging linear material. You will
+get up to five columns with this layout option.
+
+<Story height={220} id="layout-grid--flexible-1" />
+
+### Usage
+
+As an example, you can achieve three columns of content by adding three
+`.uq-grid__col` elements to the grid container like the following:
+
+```html
+<div class="uq-grid uq-grid--flexible">
+  <div class="uq-grid__col">Content</div>
+  <div class="uq-grid__col">Content</div>
+  <div class="uq-grid__col">Content</div>
+</div>
+```
+
+<Story height={85} id="layout-grid--flexible-2" />
+
 ## 6-8-12 grid
 
 We've built a grid that adapts the number of available columns to different
@@ -50,14 +75,14 @@ Shift the layout for the largest screens.
 
 ### Nesting
 
-Nested `.uq-grid` elements don't have any margins or max. width applied.
+> Nested `.uq-grid` elements don't have any margins or max. width applied.
 
 <Story height={125} id="layout-grid--twelve-eight-six-nested" />
 
-### Full-width
+## Full-width layouts
 
 If you want to manage the margins yourself i.e. nest the grid in your own custom
-container, you can apply the `uq-grid--full-width` class as well.
+container, you can apply the `uq-grid--full-width` modifier class.
 
 #### For example
 
