--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -19,7 +19,7 @@ for you to choose from.
 | Name         | Description | Thumbnail |
 | ------------ | ----------- | ------------------ |
 | Golden | [TODO] Inspired by [*The Golden Ratio*](https://www.canva.com/learn/what-is-the-golden-ratio/). Compose simple layouts that are pleasing to the eye. | Coming soon |
-| [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | [TODO] Auto-sizing grid. | Coming soon |
+| [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | Auto-sizing grid. | Coming soon |
 | Halves | [TODO] A two-column grid. | Coming soon |
 | Thirds | [TODO] A three-column grid. | Coming soon |
 | Quarters | [TODO] A four-column grid. | Coming soon |
