storybook-html: swap the grid over from Foundation grid

--- a/packages/storybook-html/src/components/page-header/page-header.docs.mdx
+++ b/packages/storybook-html/src/components/page-header/page-header.docs.mdx
@@ -15,8 +15,8 @@ The default background color is set to light grey to distinguish it from the pag
 
 ```html
 <div class="page__header">  
-  <div class="row">
-    <div class="large-12 columns">
+  <div class="uq-grid">
+    <div class="uq-grid__col uq-grid__col--6">
       <h1 class="page__title">Page title</h1>
     </div>
   </div>
@@ -27,8 +27,8 @@ The default background color is set to light grey to distinguish it from the pag
 
 ```html
 <div class="page__header">  
-  <div class="row">
-    <div class="large-12 columns">
+  <div class="uq-grid">
+    <div class="uq-grid__col uq-grid__col--6">
       <h1 class="page__title">Page title</h1>
 
       <ol class="breadcrumb-trail" itemscope="" itemtype="http://schema.org/BreadcrumbList">
