--- a/packages/storybook-html/src/docs/introduction/getting-started.story.mdx
+++ b/packages/storybook-html/src/docs/introduction/getting-started.story.mdx
@@ -3,3 +3,5 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 <Meta title="Introduction/Getting started" />
 
 # Getting started
+
+## Setup
