--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -34,7 +34,7 @@ for you to choose from.
 
 Our layout system is built upon a 6-8-12 column strategy — our base grid.
 
-### Specifications per breakpoint
+### Specifications per breakpoint range
 
 | Name(s)                 | Mockups | Breakpoint range                 | Columns | Margins (minimum) | Gutters        | Max width          |
 |-------------------------|---------|----------------------------------|---------|-------------------|----------------| ------------------ |
