storybook-html: improve flexible grid docs

--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -13,8 +13,10 @@ measurement is the [*rem*](https://www.w3schools.com/cssref/css_units.asp).
 
 ## Getting started
 
-To fulfil your design requirements, we have several options in our layout system
+To help you compose your pages, we have several options in our layout system
 for you to choose from.
+
+1. **`@uqds/grid`:** general use CSS grid classes.
 
 | Name         | Description | Thumbnail |
 | ------------ | ----------- | ------------------ |
@@ -24,13 +26,13 @@ for you to choose from.
 | Thirds | [TODO] A three-column grid. | Coming soon |
 | Quarters | [TODO] A four-column grid. | Coming soon |
 | Scrolling grid | [TODO] A grid that scrolls horizontally on mobile. Useful for holding cards. | Coming soon |
-| [6-8-12](/?path=/docs/layout-grid--twelve-eight-six#6-8-12-grid) | Advanced. The most consistent, flexible implementation of our layout system. It is what our other layouts are built upon. | Coming soon |
+| [6-8-12](/?path=/docs/layout-grid--twelve-eight-six#6-8-12-grid) | Advanced. The most flexible option. This is an implementation of our base grid (see below). | Coming soon |
 
-> Currently, all our layout options can be used by installing or downloading the
-> [`@uq-uidf/grid`](/?path=/docs/layout-grid--twelve-eight-six) package into your
-> project.
+2. **`@uqds/sections`:** CSS classes that combine layout and typography. Great
+for laying out bold blocks of content. We recommend these options for situations
+such as pull quotes, calls to action, landing pages etc.
 
-## Further reading: our base grid
+## Our base grid
 
 Our layout system is built upon a 6-8-12 column strategy — our base grid.
 
