--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -7,9 +7,8 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 The flexible grid leverages the power of [*CSS Grid Layout*](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)
 to give you a quick & flexible layout solution. You can use this grid to
 organise your content into columns that stack when browser sizes are smaller.
-Therefore, it makes it an ideal solution for arranging linear material. You will
-get up to five columns with this layout option (and more for full-width
-layouts).
+Therefore, it makes it an ideal solution for arranging linear material. Rows
+also get the same gutter (gap) as columns to make things super easy.
 
 <Story height={220} id="layout-grid--flexible-1" />
 
@@ -20,13 +19,15 @@ As an example, you can achieve three columns of content by adding three
 
 ```html
 <div class="uq-grid uq-grid--flexible">
-  <div class="uq-grid__col">Content</div>
-  <div class="uq-grid__col">Content</div>
-  <div class="uq-grid__col">Content</div>
+  <div class="uq-grid__col">1st item</div>
+  <div class="uq-grid__col">2nd item</div>
+  <div class="uq-grid__col">3rd item</div>
 </div>
 ```
 
 <Story height={85} id="layout-grid--flexible-2" />
+
+Pay attention to what the grid does when the screens get very small.
 
 ## 6-8-12 grid
 
@@ -53,7 +54,8 @@ layouts to suit different screen sizes.
 ### Stacking columns for smaller screens
 
 To prevent your columns from getting too small, you can stack columns by
-"overflowing" the row. For example:
+"overflowing" the row. For example, see what we're doing here with the smallest
+layout with the grid:
 
 ```html
 <div class="uq-grid">
