storybook-html: 'golden' layout grid docs

--- a/packages/storybook-html/src/docs/layout/layout.story.mdx
+++ b/packages/storybook-html/src/docs/layout/layout.story.mdx
@@ -20,8 +20,8 @@ for you to choose from.
 
 | Name         | Description | Thumbnail |
 | ------------ | ----------- | ------------------ |
-| Golden | [TODO] Inspired by [*The Golden Ratio*](https://www.canva.com/learn/what-is-the-golden-ratio/). Compose simple layouts that are pleasing to the eye. | Coming soon |
-| [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | Auto-sizing grid. | Coming soon |
+| [Golden](/?path=/docs/layout-grid--golden#golden) | Inspired by [*The Golden Ratio*](https://www.canva.com/learn/what-is-the-golden-ratio/). A preset to give you a layout that is pleasing to the eye. | Coming soon |
+| [Flexible grid](/?path=/docs/layout-grid--flexible-1#flexible-grid) | Auto-sizing column grid. | Coming soon |
 | Halves | [TODO] A two-column grid. | Coming soon |
 | Thirds | [TODO] A three-column grid. | Coming soon |
 | Quarters | [TODO] A four-column grid. | Coming soon |
@@ -29,8 +29,8 @@ for you to choose from.
 | [6-8-12](/?path=/docs/layout-grid--twelve-eight-six#6-8-12-grid) | Advanced. The most flexible option. This is an implementation of our base grid (see below). | Coming soon |
 
 2. **`@uqds/sections`:** CSS classes that combine layout and typography. Great
-for laying out bold blocks of content. We recommend these options for situations
-such as pull quotes, calls to action, landing pages etc.
+for laying out discrete blocks of content. We recommend these options for
+situations such as pull quotes, calls to action, landing pages etc.
 
 ## Our base grid
 
