--- a/packages/storybook-html/src/components/grid/grid.docs.mdx
+++ b/packages/storybook-html/src/components/grid/grid.docs.mdx
@@ -2,6 +2,31 @@ import { Meta, Story } from '@storybook/addon-docs/blocks';
 
 # Grid
 
+Layouts using our grid are achieved using a combination of `.uq-grid` and
+`.uq-grid__col` elements and their modifiers.
+
+## Golden
+
+This grid gives you a *main* content column and a *sidebar* column that stack
+for mobile. "Under the hood", is our 6-8-12 grid so you can keep your content
+consistently aligned with the base grid.
+
+<Story height="160" id="layout-grid--golden" />
+
+### How to
+
+Add two `.uq-grid__col` elements within a grid container (with the
+`.uq-grid--golden` modifier) like the following.
+
+```html
+<div class="uq-grid uq-grid--golden">
+  <div class="uq-grid__col">Main content</div>
+  <div class="uq-grid__col">Aside</div>
+</div>
+```
+
+See what happens when you add more columns to the same container!
+
 ## Flexible grid
 
 The flexible grid leverages the power of [*CSS Grid Layout*](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)
@@ -12,10 +37,11 @@ also get the same gutter (gap) as columns to make things super easy.
 
 <Story height={220} id="layout-grid--flexible-1" />
 
-### Usage
+### How to
 
 As an example, you can achieve three columns of content by adding three
-`.uq-grid__col` elements to the grid container like the following:
+`.uq-grid__col` elements to the grid container (with the `.uq-grid--flexible`
+modifier) like the following.
 
 ```html
 <div class="uq-grid uq-grid--flexible">
@@ -93,7 +119,7 @@ Shift the layout for the largest screens.
 
 <Story height={420} id="layout-grid--twelve-eight-six-desktop" />
 
-### Nesting
+## Nesting
 
 > Nested `.uq-grid` elements don't have any margins or max. width applied.
 
